--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<header>
 			<div class="logo-container">
 				<img src="./img/logo.svg" alt="logo"/>
-				<h4 class="logo">Three Dots</h4>
+				<h4 class="logo">CSR</h4>
 			</div>
 			<nav>
 				<ul class="nav-links">
